--- a/doc/embedded.tex
+++ b/doc/embedded.tex
@@ -1,13 +1,19 @@
-@make(article,form 1)
-@style(fontfamily=TimesRoman)
-@disable(contents)
-@set(page=1)
-@MajorHeading[Embedded Scheme->C -- 1 February 1993]
+\documentclass[12pt]{article}
+\usepackage{fullpage}
+\usepackage{parskip}
+\usepackage{newcent}
 
-One of the major goals of @t(Scheme->C) was to build a Scheme
+\title{Embedded \texttt{Scheme->C} --- 1 February 1993}
+\date{}
+
+\begin{document}
+
+\maketitle
+
+One of the major goals of \texttt{Scheme->C} was to build a Scheme
 compiler and runtime system that could coexist with other programming
 languages.  While this effort has been quite successful,
-@t(Scheme->C) has not offered everything needed by applications that
+\texttt{Scheme->C} has not offered everything needed by applications that
 wish to embed a Scheme server, feed it arbitrary expressions for
 evaluation, yet remain responsive to additional requests.
 
@@ -21,141 +27,137 @@ In order to safely execute in such a variety of environments, the
 Scheme system must allow the application to handle external events on
 a timely basis and place minimum requirements on the available system
 services. In order to solve these problems, the 01feb93 release of
-@t(Scheme->C) has been modified in the following areas.
+\texttt{Scheme->C} has been modified in the following areas.
 
-Explicit Time Slicing - in order to return to the caller at regular
-intervals, @t(Scheme->C) can be compiled with explicit time slicing.
+Explicit Time Slicing---in order to return to the caller at regular
+intervals, \texttt{Scheme->C} can be compiled with explicit time slicing.
 On each procedure entry or backwards branch, a counter is
 decremented. When the counter goes to 0, Scheme returns control to
 the application program at the point where it was called.  At a later
 time, the application has the option of continuing the previous
 computation or starting a new computation.
 
-Explicit Stack Overflow Checks - @t(Scheme->C) may be compiled with
+Explicit Stack Overflow Checks---\texttt{Scheme->C} may be compiled with
 explicit stack overflow checks.  This is necessary as many
 environments have no other means for detecting a stack overflow which
 could damage the embedding application or crash the personal
 computer.
 
-Request-response interaction - when used as an embedded server, all
+Request-response interaction---when used as an embedded server, all
 interaction with Scheme is via one interface procedure.  Errors and
 breakpoints are handled across this interface like any other type of
 request.
 
-Operating System independence - unlike previous releases,
-@t(Scheme->C) does not assume the existence of a UNIX-like I/O
+Operating System independence---unlike previous releases,
+\texttt{Scheme->C} does not assume the existence of a UNIX-like I/O
 system.  Rather than directly calling the host I/O system, all
 requests are via implementation specific routines in scrt/cio.c.  In
-fact, an embedded @t(Scheme->C) server doesn't assume that the client
+fact, an embedded \texttt{Scheme->C} server doesn't assume that the client
 even has an I/O system.  Instead the stdout and stderr ports are
 string output ports.
 
-Previous releases of @t(Scheme->C) used operating system traps to
+Previous releases of \texttt{Scheme->C} used operating system traps to
 detect division by zero and keyboard interrupts.  Division by zero
 errors are now explicitly tested for, and keyboard interrupt signals
-are not used by embedded @t(Scheme->C) systems.
+are not used by embedded \texttt{Scheme->C} systems.
 
-@heading[Application interface]
+\subsection*{Application interface}
 
 Applications evaluate a Scheme expression by calling the procedure
-@t[scheme2c]:
-
-@begin(programexample)
-
+\texttt{scheme2c}:
+\begin{quote}
+\begin{verbatim}
 void  scheme2c( char *expression,
-		int *status,
-		char **result,
-		char **error )
-@end(programexample)
-
-where @t[expression] is a pointer to a null terminated string of ASCII
+                int *status,
+                char **result,
+                char **error )
+\end{verbatim}
+\end{quote}
+where \texttt{expression} is a pointer to a null terminated string of ASCII
 characters that is the Scheme expression to evaluate.  When the procedure
-returns, the result is stored in @t[status], @t[result], and
-@t[error].  The value returned in @t[status] is interpreted as
+returns, the result is stored in \texttt{status}, \texttt{result}, and
+\texttt{error}.  The value returned in \texttt{status} is interpreted as
 follows:
 
-@begin(itemize)
-
-@t[0]: expression evaluated normally.  The value is saved in
-@t[*SCHEME2C-RESULT*] within the Scheme system  and it is also
+\begin{description}
+\item[\texttt{0}:] expression evaluated normally.  The value is saved in
+\texttt{*SCHEME2C-RESULT*} within the Scheme system  and it is also
 written to Scheme's stdout-port.
 
-@t[1]: an error occurred.  The error message is written to Scheme's
+\item[\texttt{1}:] an error occurred.  The error message is written to Scheme's
 stderr-port.  If no previous error is being examined, the stack trace
 is written to Scheme's stderr-port and the associated environments
-are in the list @t[*ERROR-ENV*].  The client should evaluate
-@t[(RESET-ERROR)] when done examining the error state.  Note that if
-additional errors occur before @t[(RESET-ERROR)] is evaluated, they
+are in the list \texttt{*ERROR-ENV*}.  The client should evaluate
+\texttt{(RESET-ERROR)} when done examining the error state.  Note that if
+additional errors occur before \texttt{(RESET-ERROR)} is evaluated, they
 will not cause a stack dump, nor have the error environment saved.
 
-@t[2]: an internal error in @t(Scheme->C) occurred.  The error
+\item[\texttt{2}:] an internal error in \texttt{Scheme->C} occurred.  The error
 message is reported via Scheme's stderr-port.  No further execution
 is possible.
 
-@t[3]: the computation timed out.  Evaluate @t[(PROCEED)] to continue
-execution.  Evaluate @t[(PROCEED?)] to cause a breakpoint  when execution
+\item[\texttt{3}:] the computation timed out.  Evaluate \texttt{(PROCEED)} to continue
+execution.  Evaluate \texttt{(PROCEED?)} to cause a breakpoint  when execution
 resumes.
 
-@t[4]: a procedure entry breakpoint occurred.  The call arguments are
+\item[\texttt{4}:] a procedure entry breakpoint occurred.  The call arguments are
 written to Scheme's stderr-port and the associated environments are
-in the list @t[*BPT-ENV*]. The procedure stack trace can be viewed by
-evaluating @t[(BACKTRACE)].   The procedure arguments are in
-@t[*ARGS*]. Evaluate @t[(PROCEED)] to continue execution, or
-@t[(RESET-BPT)] to abort.
+in the list \texttt{*BPT-ENV*}. The procedure stack trace can be viewed by
+evaluating \texttt{(BACKTRACE)}.   The procedure arguments are in
+\texttt{*ARGS*}. Evaluate \texttt{(PROCEED)} to continue execution, or
+\texttt{(RESET-BPT)} to abort.
 
-@t[5]: a procedure exit breakpoint occurred.  The result is written
-to Scheme's stderr-port and saved in @t[*RESULT*].  The environments
-are in the list @t[*BPT-ENV*].  Evaluate @t[(PROCEED)] to continue
-execution, @t[(PROCEED] @i(expression)@t[)] to continue returning a
-new value, or @t[(RESET-BPT)] to abort.  Note that additional
+\item[\texttt{5}:] a procedure exit breakpoint occurred.  The result is written
+to Scheme's stderr-port and saved in \texttt{*RESULT*}.  The environments
+are in the list \texttt{*BPT-ENV*}.  Evaluate \texttt{(PROCEED)} to continue
+execution, \texttt{(PROCEED \textnormal{\emph{expression}})} to continue returning a
+new value, or \texttt{(RESET-BPT)} to abort.  Note that additional
 breakpoints will not occur while examining the state of a breakpoint.
-@end(itemize)
+\end{description}
 
-The value returned in @t[result] is pointer to a null terminated
+The value returned in \texttt{result} is pointer to a null terminated
 string of ASCII characters that is the contents of Scheme's
 stdout-port, i.e. the standard output port.  The value retirned in
-@t[error] is a pointer to a null terminated string of ASCII
+\texttt{error} is a pointer to a null terminated string of ASCII
 characters that is the contents of Scheme's stderr-port, i.e. the
 error output port.
 
-The size of stack used by an embedded Scheme system is set by
-evaluating @t[(set-stack-size!] @i(expression)@t[)], where
-@i(expression) is the size in bytes.  The current stack size can be
-obtained by evaluating @t[(stack-size)].  Scheme reserves a portion
-of this stack for error recovery, but this may be exceeded on some
-implementations.  An application should verify that it has set the
-stack correctly by evaluating an expression that forces a stack
+The stack size which is used by an embedded Scheme system is set by
+evaluating \texttt{(set-stack-size!\ \textnormal{\emph{expression}})},
+where \emph{expression} is the size in bytes.  The current stack size
+can be obtained by evaluating \texttt{(stack-size)}.  Scheme reserves
+a portion of this stack for error recovery, but this may be exceeded
+on some implementations.  An application should verify that it has set
+the stack correctly by evaluating an expression that forces a stack
 overflow error and then verifying that the Scheme stack has not
 overflowed into the application.
 
-The Scheme time slice is set by evaluating @t[(set-time-slice!]
-@i(expression)@t[)], where @i(expression) is the number of Scheme
+The Scheme time slice is set by evaluating \texttt{(set-time-slice!\
+\textnormal{\emph{expression}})}, where \emph{expression} is the number of Scheme
 procedure calls that should be made in a time slice.  Experiment to
 find the right value for your application. The current time slice
-value is obtained by evaluating @t[(time-slice)].
+value is obtained by evaluating \texttt{(time-slice)}.
 
-@heading(Sample embedded application)
+\subsection*{Sample embedded application}
 
-A sample embedded Scheme application, @t[embedded], is found in the
-directory @t[server].  A typescript of its execution shows how an
+A sample embedded Scheme application, \texttt{embedded}, is found in the
+directory \texttt{server}.  A typescript of its execution shows how an
 application should interact with an embedded Scheme system.
-
-@begin(programexample)
-
+\begin{quote}
+\begin{verbatim}
 csh 990 >embedded
 Embedded Scheme->C Test Bed
 0- (+ 1 2)
 3
 0-
-@end(programexample)
-
+\end{verbatim}
+\end{quote}
 The program prompts the user for a Scheme expression which is then
-evaluated using @t[scheme2c].  The @t(result) and @t(error) messages
+evaluated using \texttt{scheme2c}.  The \texttt{result} and \texttt{error} messages
 are then printed, followed by a prompt (incorporating the value of
-@t[status]) for the next expression.
-
-@begin(programexample)
-
+\texttt{status}) for the next expression.
+\begin{quote}
+\begin{verbatim}
 0- (time-slice)
 100000
 0- (stack-size)
@@ -170,15 +172,14 @@ are then printed, followed by a prompt (incorporating the value of
 (EXECUTE [inside SCHEME2C] ...)
 (SCREP_SCHEME2C ...)
 4-
-@end(programexample)
-
+\end{verbatim}
+\end{quote}
 After obtaining the current time slice and stack size values, a
 looping expression was entered.  Twice it timed out and was continued
-by evaluating the expression @t[(proceed)].  The third time it timed
-out, @t[(proceed?)] was entered to force a breakpoint.
-
-@begin(programexample)
-
+by evaluating the expression \texttt{(proceed)}.  The third time it timed
+out, \texttt{(proceed?)} was entered to force a breakpoint.
+\begin{quote}
+\begin{verbatim}
 4- (list-ref *bpt-env* 0)
 ((I . 21345) (LOOP . #*PROCEDURE*) ($_0 . 0))
 0- (proceed)
@@ -192,16 +193,15 @@ out, @t[(proceed?)] was entered to force a breakpoint.
 0- (reset-bpt)
 #F
 0-
-@end(programexample)
-
+\end{verbatim}
+\end{quote}
 The environment at the time of the breakpoint was examined to find
-the value of @t(i) by looking at element 0, corresponding to
-@t(env-0), of the list @t(*bpt-env*).  The program was then contined
-by @t[(proceed)] and then @t(i) was examined at the end of the next
+the value of \texttt{i} by looking at element 0, corresponding to
+\texttt{env-0}, of the list \texttt{*bpt-env*}.  The program was then contined
+by \texttt{(proceed)} and then \texttt{i} was examined at the end of the next
 time slice to find out how much work was done.
-
-@begin(programexample)
-
+\begin{quote}
+\begin{verbatim}
 0- (let ((x 1) (y 2)) (+ x y z))
 ***** Z Top-level symbol is undefined
 (+ X Y Z) in ENV-0
@@ -215,14 +215,13 @@ time slice to find out how much work was done.
 0- (reset-error)
 #F
 0-
-@end(programexample)
-
+\end{verbatim}
+\end{quote}
 An error occurred and then error environment was examined.  While
 examining the error environment, another error occurred.  This simply
 resulted in an error message.
-
-@begin(programexample)
-
+\begin{quote}
+\begin{verbatim}
 0- (define (f x) (* 2 x))
 F
 0- (bpt f)
@@ -242,19 +241,20 @@ F
 5- (proceed 15)
 15
 0-
-@end(programexample)
-
+\end{verbatim}
+\end{quote}
 The final example shows the use of procedure breakpoints.  One thing
 to note, is that breakpoints do not nest.
 
-@heading[Adding Your Code to an Embedded Scheme->C System]
+\subsection*{Adding Your Code to an Embedded \texttt{Scheme->C} System}
 
 There are two ways to do this.  The easiest is to replace the
 module scrtuser (in the files scrtuser.sc and scrtuser.c) and
 then rebuild the embedded Scheme system.  An alternative is to
 separately compile your modules, link them into your
 application, and then explicitly initialize your modules after
-Scheme has been initialized.  This is done by calling @t(scheme2c)
-with an expression like "#t" and then calling your module
+Scheme has been initialized.  This is done by calling \texttt{scheme2c}
+with an expression like \texttt{"\#t"} and then calling your module
 initialization procedures which have the form
-@i(module-name)@t[__init].
+\emph{module-name}\texttt{\_\_init}.
+\end{document}
