--- a/doc/intro.tex
+++ b/doc/intro.tex
@@ -2,15 +2,17 @@
 \usepackage{fullpage}
 \usepackage{parskip}
 \usepackage{newcent}
+\usepackage{s2c}
 
 \title{An Introduction to \texttt{Scheme->C} in 19 Prompts}
+\author{Joel F. Bartlett}
 \date{12 August 1988}
 
 \begin{document}
 
 \maketitle
 
-\texttt{Scheme->C} is an implementation of the language Scheme.  Besides
+\StoC\ is an implementation of the language Scheme.  Besides
 the usual interpreter, the implementation includes an unusual
 compiler which compiles Scheme to C.  This allows stand-alone
 programs and programs combining Scheme and other programming
