switch from ancient broken-font R4RS postscript to LaTeX R4RS sources
darcs-hash:20080213143316-837cd-3914a96e1f99f6cae6e4ecafb74bb3fc4af5f84f.gz

--- a/doc/README
+++ b/doc/README
@@ -9,7 +9,7 @@ index.tex	a LaTeX reference document for the language
 
 intro.tex	a LaTeX document introducing Scheme->C.
 
-r4rs.psf	PostScript for the R4RS scheme standard.
+r4rs/		the R4RS scheme standard in LaTeX.
 
 scc.l		UNIX man page for the Scheme->C compiler.
 
