use s2c macro in 19 prompts title
darcs-hash:20080220095927-837cd-2bbae0ef558fc1da07f00743c6fbe54bab454a6a.gz

--- a/doc/intro.tex
+++ b/doc/intro.tex
@@ -4,7 +4,7 @@
 \usepackage{newcent}
 \usepackage{s2c}
 
-\title{An Introduction to \texttt{Scheme->C} in 19 Prompts}
+\title{An Introduction to \StoC\ in 19 Prompts}
 \author{Joel F. Bartlett}
 \date{12 August 1988}
 
