new section: lisp
darcs-hash:20090317211759-837cd-451cb3c6d7d2b298c26fe425f457a9a450e28d70.gz

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+scheme2c (1993.3.15.2-3) unstable; urgency=low
+
+  * Switch to new section: lisp
+
+ -- Barak A. Pearlmutter <bap@debian.org>  Tue, 17 Mar 2009 21:17:38 +0000
+
 scheme2c (1993.3.15.2-2) unstable; urgency=low
 
   * Notice unrecognized architecture in debian/rules
