rev policy, homepage and vcs control fields

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+scheme2c (1993.3.15.2-4rc) unstable; urgency=low
+
+  * rev deb policy
+  * debian/control vcs and homepage fields
+
+ -- Barak A. Pearlmutter <bap@debian.org>  Wed, 18 Mar 2009 08:11:50 +0000
+
 scheme2c (1993.3.15.2-3) unstable; urgency=low
 
   * Switch to new section: lisp
