fix typo in doc/intro.tex

--- a/doc/intro.tex
+++ b/doc/intro.tex
@@ -64,7 +64,7 @@ alerion 2>more fib.sc
 \end{small}
 
 A ``;'' indicates that the rest of the line is a comment.  The form
-\texttt{(module fib)} which must be the first form is the file indicates
+\texttt{(module fib)}, which must be the first form in the file, indicates
 that the functions in the file should be part of the module ``fib''.
 Typically the module name is the file name (less the ``.sc'' extension)
 of the source file.
