--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
 scheme2c (1993.3.15.2-5rc) unstable; urgency=low
 
   * remove any remaining darcs debris
+  * merge upstream bug fix (signal handling)
+  * merge upstream AMD64 performance enhancement (SSE)
 
- -- Barak A. Pearlmutter <bap@debian.org>  Thu, 26 Mar 2009 15:07:40 +0000
+ -- Barak A. Pearlmutter <bap@debian.org>  Tue, 08 Sep 2009 14:15:07 -0400
 
 scheme2c (1993.3.15.2-4) unstable; urgency=low
 
