--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,9 @@ scheme2c (1993.3.15.2-7) unstable; urgency=low
 
   * merge upstream change: increase scc heap while compiling xlib
   * modernize/shorten debian/rules
+  * support ARM architecture (armel)
 
- -- Barak A. Pearlmutter <bap@debian.org>  Tue, 27 Oct 2009 16:42:18 -0400
+ -- Barak A. Pearlmutter <bap@debian.org>  Wed, 20 Jan 2010 18:04:24 +0100
 
 scheme2c (1993.3.15.2-6) unstable; urgency=low
 
