--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-scheme2c (1993.3.15.2-8) UNRELEASED; urgency=low
+scheme2c (1993.3.15.2-8) unstable; urgency=low
 
   * bump deb standards
+  * Switch to dpkg-source 3.0 (git) format
 
- -- Barak A. Pearlmutter <bap@debian.org>  Fri, 19 Mar 2010 22:54:04 +0000
+ -- Barak A. Pearlmutter <bap@debian.org>  Thu, 25 Mar 2010 18:56:40 +0000
 
 scheme2c (1993.3.15.2-7) unstable; urgency=low
 
