--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+scheme2c (1993.3.15.2-9) unstable; urgency=low
+
+  * remove -march=native from CFLAGS (closes: #582922)
+
+ -- Barak A. Pearlmutter <bap@debian.org>  Mon, 24 May 2010 21:20:16 +0100
+
 scheme2c (1993.3.15.2-8) unstable; urgency=low
 
   * bump deb standards
