--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+scheme2c (1993.3.15.2-10) unstable; urgency=low
+
+  * merge upstream fixes: syntax-rules/case
+  * use pdflatex not latex;dvips;ps2pdf bypassing ps2pdf bug (closes: #585546)
+
+ -- Barak A. Pearlmutter <bap@debian.org>  Mon, 28 Jun 2010 12:37:21 +0200
+
 scheme2c (1993.3.15.2-9) unstable; urgency=low
 
   * remove -march=native from CFLAGS (closes: #582922)
